<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:layout_width="108dp"
            android:layout_height="181dp"
            android:id="@+id/logo"
            android:src="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_signin_email"
            style="@style/AppTextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:layout_marginTop="@dimen/tiny_margin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/tiny_margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/tiny_margin">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:hint="@string/email_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTextInputLayoutStyle"
            android:id="@+id/textinput_signin_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/tiny_margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/tiny_margin"
            android:layout_marginTop="@dimen/tiny_margin"
            app:layout_constraintTop_toBottomOf="@id/textinput_signin_email">
        <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:id="@+id/passwordEditText"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:hint="@string/password_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/signinButton"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            android:text="@string/sign_in_text"
            android:layout_marginTop="@dimen/tiny_margin"
            app:layout_constraintTop_toBottomOf="@id/textinput_signin_password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/tiny_margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/tiny_margin"/>

    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/small_text_size"
            android:text="@string/no_account_text"
            app:layout_constraintTop_toBottomOf="@id/signinButton"
            android:layout_marginStart="@dimen/tiny_margin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="@dimen/tiny_margin"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>